fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ h2 {
 h3 {
   font-family: 'Montserrat', sans-serif;
   color: #572121;
+  display: inline-block;
+  padding-top: 15px;
 }
 
 
@@ -37,10 +39,10 @@ a {
 }
 
 hr {
-  border: dotted #7D7D7D 8px;
+  border: dotted #7D7D7D 7px;
   border-bottom: none;
   width: 3%;
-  margin: 100px auto;
+  margin: 70px auto;
 }
 
 .top-cloud {
@@ -61,7 +63,7 @@ hr {
 }
 
 .intro {
-  width: 30%;
+  width: 35%;
   margin: auto;
 }
 
@@ -73,46 +75,49 @@ hr {
 
 .middle-container {
   background-color: #f3f8ff;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .bottom-container {
   background-color: grey;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  line-height: .5;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  line-height: 0;
   font-family: Arial;
   color: white;
 }
 
 .skills {
-  padding-top: 3em;
-  padding-bottom: 3em;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 .skill-row {
-  width: 50%;
-  margin: 100px auto 100px auto;
+  width: 30%;
+  margin: 70px auto 70px auto;
   text-align: left;
 }
 
 .assess {
-  width: 25%;
+  width: 30%;
   float: left;
-  margin-right: 30px;
+  margin-right: 20px;
+  display: inline-block;
 }
 
 .write {
-  width: 25%;
+  width: 30%;
   float: right;
-  margin-left: 30px;
+  margin-left: 20px;
+  display: inline-block;
 }
 
 .design {
-  width: 25%;
+  width: 30%;
   float: left;
-  margin-right: 30px;
+  margin-right: 20px;
+  display: inline-block;
 }
 
 .get-in-touch {
@@ -120,8 +125,8 @@ hr {
 }
 
 .contact-me {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .footer-link {
